tests/baselines/reference/jsFileCompilationSyntaxError.errors.txt
tests/cases/compiler/a.js(3,6): error TS1223: 'type' tag already specified.


==== tests/cases/compiler/a.js (1 errors) ====
    /**
      * @type {number}
      * @type {string}
         ~~~~
!!! error TS1223: 'type' tag already specified.
      */
    var v;
    